--- a/PlaymanitySDK.uplugin
+++ b/PlaymanitySDK.uplugin
@@ -1,17 +1,16 @@
 {
 	"FileVersion": 3,
 	"Version": 1,
-	"VersionName": "1.0.1",
+	"VersionName": "1.2",
 	"FriendlyName": "PlaymanitySDK",
-	"Description": "This adds the login / signup system but beautifully.",
+	"Description": "The official Playmanity plug-in for an super easy integration.",
 	"Category": "Other",
 	"CreatedBy": "F4r9 - Playmanity",
-	"CreatedByURL": "https://github.com/playmanity/Playmanity-Unreal-Engine-SDK/",
-	"DocsURL": "https://github.com/playmanity/Playmanity-Unreal-Engine-SDK/wiki",
+	"CreatedByURL": "https://github.com/Xp3rtA/Playmanity-Unreal-Engine-SDK",
+	"DocsURL": "https://github.com/Xp3rtA/Playmanity-Unreal-Engine-SDK/wiki",
 	"MarketplaceURL": "",
 	"SupportURL": "",
 	"EngineVersion": "4.27.0",
 	"CanContainContent": true,
-	"IsBetaVersion": true,
 	"Installed": true
 }
